--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -5,6 +5,18 @@
   font-family: awesome;
   font-style: normal;
 }
+/* En tu archivo App.css */
+
+.table-auto th, .table-auto td {
+  width: 150px; /* Ajusta el tamaño según sea necesario */
+  text-align: center;
+}
+
+.table-auto input {
+  width: 90%; /* Ajusta el ancho para que los inputs sean más pequeños */
+}
+
+
 .menuItem {
   padding: 10px;
   width: 110px;
