--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -8,12 +8,12 @@
 /* En tu archivo App.css */
 
 .table-auto th, .table-auto td {
-  width: 150px; /* Ajusta el tamaño según sea necesario */
+  width: 150px; 
   text-align: center;
 }
 
 .table-auto input {
-  width: 90%; /* Ajusta el ancho para que los inputs sean más pequeños */
+  width: 90%; 
 }
 
 
@@ -21,7 +21,6 @@
   padding: 10px;
   width: 110px;
   height: 110px;
-
   margin: 5px auto 50px auto;
   border-radius: 15px;
   font-size: 16px;
@@ -60,8 +59,6 @@
 .header li {
   transition: all;
   transition-duration: 0.2s;
-  text-decoration-color: #a68dd1;
-  text-decoration-thickness: 2px;
 }
 
 .header li:hover {
@@ -77,4 +74,29 @@
 @font-face {
   font-family: awesome;
   src: url("./assets/Poppins-Regular.ttf");
+}
+.containerDifuminado {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10; /* Debe estar detrás del modal */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.containerAviso {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 20; /* Debe estar sobre el fondo desenfocado */
+  max-width: 600px;
+  height: 20%;
+  width: 90%;
+  background-color: white;
+
+}
+.difuminado{
+  background-image: url(./assets/difuminado.jpg);
 }
