--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -1,3 +1,102 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  font-family: awesome;
+  font-style: normal;
+}
+/* En tu archivo App.css */
+
+.table-auto th, .table-auto td {
+  width: 150px; 
+  text-align: center;
+}
+
+.table-auto input {
+  width: 90%; 
+}
+
+
+.menuItem {
+  padding: 10px;
+  width: 110px;
+  height: 110px;
+  margin: 5px auto 50px auto;
+  border-radius: 15px;
+  font-size: 16px;
+  text-align: center;
+  transition: all;
+  transition-duration: 0.2s;
+}
+
+.menuItem:hover {
+  transform: scale(1.08);
+}
+
+.imgMenu {
+  margin: auto;
+}
+.imgLogo {
+  width: 120px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 12px;
+  margin-bottom: 80px;
+}
+.sidebar {
+  width: 180px;
+  border-right: 1px solid rgb(199, 199, 199);
+}
+.header {
+  color: black;
+  height: 90px;
+  width: 100%;
+  font-size: 20px;
+  transition: all;
+  transition-duration: 1s;
+  border-bottom: 1px solid rgb(199, 199, 199);
+}
+.header li {
+  transition: all;
+  transition-duration: 0.2s;
+}
+
+.header li:hover {
+  transform: scale(1.05);
+}
+.usuario {
+  position: absolute;
+  right: 50px;
+  top: 3px;
+  padding: 5px;
+  width: 170px;
+}
+@font-face {
+  font-family: awesome;
+  src: url("./assets/Poppins-Regular.ttf");
+}
+.containerDifuminado {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10; /* Debe estar detrás del modal */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.containerAviso {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 20; /* Debe estar sobre el fondo desenfocado */
+  max-width: 600px;
+  height: 20%;
+  width: 90%;
+  background-color: white;
+
+}
+.difuminado{
+  background-image: url(./assets/difuminado.jpg);
+}
